# course_work_beta

./: pyproject.toml
data/: .~lock.operations.xls#  operations.xls  services.json  views.json
src/: logger.py  main.py  reports.py  services.py  views.py
